# LabyAR_21

./: PFE.sln  Protocole utilisation.docx
PFE/: .gitignore  CMakeLists.txt  Makefile  PFE.vcxproj  PFE.vcxproj.filters  README.md  main.cpp  statTempsReel.csv  statistiques.csv
PFE/analyse/: EdgeDetection.cpp  EdgeDetection.h
PFE/database/: Bdd.cpp  Bdd.h
PFE/modelisation/: GlutMaster.cpp  GlutMaster.h  GlutWindow.cpp  GlutWindow.h  OpenGL.cpp  OpenGL.h  Transformation.cpp  Transformation.h
PFE/physics/: AngleModel.cpp  AngleModel.h  Ball.cpp  Ball.h  CollisionDetection.cpp  CollisionDetection.h  Vector2d.cpp  Vector2d.h  Wall.cpp  Wall.h
PFE/stream/: CameraStream.cpp  CameraStream.h
PFE/writing/: CSVWriter.cpp  CSVWriter.h
